...
              key: formKey,
              child: Stack(
                children: [
                  Column(
                    children: [
                      TextFormField(
                        key: const Key("title_text_field"),
                          controller: todoController,
                          validator: (value) {
                            if (value!.isEmpty) {
                              return "enter todo please";
                            }
                            return null;
...
                              hintText: "Enter your todo ",
                              border: OutlineInputBorder(
                                  borderRadius: BorderRadius.circular(10),
                                  borderSide: const BorderSide(width: 1)))),
                      20.gap(),
                      MaterialButton(
                        key: const Key("edit_btn"),
                          color: Colors.blue,
                          child: Text(
                            isNewMode ? "Create Todo" : "Edit Todo",
                            style: const TextStyle(color: Colors.white),
                          ),
                          onPressed: () {
...
